# tools

./: AGENTS.md  Cargo.toml  QWEN.md  README.md  rustfmt.toml  todo_list_design.md
.kiro/specs/modern-player-layout/: design.md  requirements.md  tasks.md
src/: common.rs  lib.rs  main.rs  reminder.rs  scheduler.rs  types.rs  ui.rs
src/commands/: todo.rs
src/player/: mod.rs
src/services/: todo_service.rs
src/ui/: app.rs  event_handler.rs  layout.rs  mod.rs  navigation.rs  renderer.rs  state.rs  theme.rs  widgets.rs
