[package]
name = "tools-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tools-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ratatui = { version = "0.28", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
# chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
