[package]
name = "tools-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tools_rs"
path = "src/lib.rs"

[[bin]]
name = "tools-rs"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rodio = "0.17"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter"] }

[dev-dependencies]
proptest = "1.4"
